added test for loom